# text-analyzer

./: .env.save  .env.test  .gitignore  .gitmodules  README copy.md  README.md  TODO  azure_openai_test.ipynb  check_install.py  config.dev.yaml  config.yaml  config_new.yaml  dot_env_template  environment.yaml  get_project_structure.py  pyproject.toml  pytest.ini  setup_config.py  setup_dev.sh  test_fileutils.py  test_simple.py
backups/20241213_152853/tests/: conftest.py
data/config/: config.dev.yaml  config.yaml  fileutils_config.yaml  language_processing.yaml  test_data_metadata.yaml  ui_texts.yaml
data/configurations/: config.yaml  language_processing.yaml  test_data_metadata.yaml
data/configurations/stop_words/: stop-words-finnish.txt:Zone.Identifier
data/parameters/: base_params_20241125_100321.yaml  fi_params_20241125_100322.yaml  test_data_metadata.yaml
data/processed/: analysis_results_20241108_184350.yaml  analysis_results_20241108_192636.yaml  analysis_results_20241108_193702.yaml  analysis_results_20241108_194113.yaml  analysis_results_20241108_194804.yaml  test_results_20241105_144940.yaml  test_results_20241105_164423.yaml  test_results_20241105_192319.yaml  test_results_20241105_192924.yaml  test_results_20241105_193744.yaml  test_results_20241105_194810.yaml  test_results_20241105_200647.yaml  test_results_20241105_201405.yaml  test_results_20241106_113024.yaml
docs/: ANALYSIS_DEMO_DOC.md  API_REFERENCE.md  CONFIGURATION_GUIDE.md  EXAMPLES.md  GETTING_STARTED.md  INPUT_FILES.md  INSTALLATION_GUIDE.md  LITE_ANALYZER.md  OUTPUT_FORMATTING.md  TROUBLESHOOTING.md  logging_basics.md  testing_docs.md  testing_test_plan.md  todo_2024-11-08.md  ui_guide.md  ui_text_system.md  voikko_installation_guide.md
docs/migration_guides/: environment_migration.md
docs/other_docs/: FILEUTILS_USAGE.md  OpenAI_Structured_Outputs.md
docs/todo/: azure_plan.md  category_todo_2024-11-13.md  keyword_analysis_todo_2024-11-11.md  parameter_file_structure.md  theme_analysis_todo_2024-11-12.md  todo_2024-11-05.md  todo_2024-11-13.md
examples/: excel_analysis_example.py  lite_analysis_example.py  semantic_analysis_example.py  semantic_analysis_example_v1.py  single_sentence_analysis_example.py
notebooks/: analysis_pipeline_code.py  analysis_pipeline_notebook.ipynb  analyzer_demo_azure_nb.ipynb  analyzer_demo_local_nb.ipynb  analyzer_demo_nb.ipynb  azure_notebook.ipynb  azure_test.ipynb  cross_env_analyzer_demo_nb.ipynb  demo_keyword_analyzer.ipynb  excel_analysis_demo.ipynb  keyword_analysis_testing_notebook.ipynb  semantic_analyzer_demo.ipynb  semantic_analyzer_nb.ipynb  testing_nb.ipynb  text_analyzer_demo_nb.ipynb  text_analyzer_demo_nb_NOT_WORKING.ipynb  theme_analysis.ipynb  voikko_testing.ipynb
old_code/: keyword_extractor.py
old_docs/: GETTING_STARTED.md  TROUBLESHOOTING.md
old_tests/: conftest.py  test_basic.py
old_tests/fixtures/: test_content.py
old_tests/helpers/mock_llms/: __init__.py  base.py  category_mock.py  keyword_mock.py  old_category_mock.py  old_theme_mock.py
old_tests/test_performance/: test_performance.py
old_tests/test_pipeline/: test_pipeline.py
scripts/: check_ui_texts.py  debug_imports.py  generate_parameter_files.py  install_fileutils.py  migrate_config.py  migrate_parameters.py  optimize_image.py  setup_dev.bat  setup_dev.sh  setup_project.py  test_data_generator.py
scripts/azure/: setup_voikko_azure.sh
src/: __init__.py  schemas.py
src/analyzers/: __init__.py  base.py  category_analyzer.py  excel_support.py  keyword_analyzer.py  keyword_analyzer_old.py  lite_analyzer.py  theme_analyzer.py
src/az_helpers/: az_environment.py  setup_azure.py
src/config/: __init__.py  language_processing.yaml  manager.py  models.py  models.yaml
src/config/prompts/: prompts.yaml
src/core/: __init__.py  config.py  config_and_logging.py  config_base.py  config_management.py  config_new.py  language_parameters.py
src/core/language_processing/: __init__.py  base.py  english.py  factory.py  finnish.py
src/core/llm/: factory.py  (+1 more)
src/excel_analysis/: base.py  factory.py  formatters.py  parameters.py
src/formatters/: analysis_formatters.py
src/loaders/: __init__.py  models.py  parameter_adapter.py  parameter_config.py  parameter_handler.py  parameter_loader.py  parameter_validation.py  parameter_validator.py
src/models/: parameter_models.py
src/nb_helpers/: analyzers.py  base.py  debug.py  environment.py  environment_manager.py  excel.py  logging.py  logging_manager.py  nb_environment.py  testers.py  visualizers.py
src/semantic_analyzer/: __init__.py  analyzer.py  analyzer_koe.py  base.py  parameters.py
src/utils/: adding_file_utils.md  formatting_config.py  output_formatter.py  vanha_output_format.py
tests/: __init__.py  config.py  conftest.py  test_parameter_loading.py  test_semantic_analyzer.py  test_stopwords.py  test_voikko.py
tests/helpers/: config.py  mock_llm.py
tests/mocks/: __init__.py  mock_llm.py
tests/test_components/: test_category_analyzer.py  test_keyword_analyzer.py  test_parameter_handling.py  test_theme_analyzer.py
tests/unit/: test_semantic_analyzer.py
ui/: app.py  run_app.py  setup_ui.py  text_converter.py  text_manager.py
(+22 files in other folders)
